feat(улучшен бек, приходят слоты после выбора даты)
